Updated some plugins. Added memory related configuration to the surefire plugin, in an attempt to reduce the used memory, which was causing OutOfMemoryErrors in the build performed by Jenkins.